changes in the crud and some services. the structure of User and moving methods from personal lists to user